--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,3 +3,12 @@
 ^.gitignore$
 ^.travis.yml$
 ^.git/.*$
+src/*.o
+src/*.so
+LICENSE.md
+LICENSE
+Test_1_mECS.RData
+Test_2_Kolod.RData
+Test_3_Pollen.RData
+Test_4_Usoskin.RData
+R_main_demo.R
