--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,4 @@ importFrom(stats,dnorm)
 importFrom(stats,kmeans)
 importFrom(stats,pbeta)
 importFrom(stats,rnorm)
-useDynLib(SIMLR,projsplx_R)
+useDynLib(SIMLR, projsplx_R, .registration = TRUE)
