update according to review requests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,4 @@ importFrom(stats,dnorm)
 importFrom(stats,kmeans)
 importFrom(stats,pbeta)
 importFrom(stats,rnorm)
-useDynLib(SIMLR, projsplx_R, .registration = TRUE)
+useDynLib(SIMLR,projsplx)
