--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: SIMLR
 Version: 1.1.1
-Date: 2016-10-20
+Date: 2017-01-30
 Title: SIMLR: Single-cell Interpretation via Multi-kernel LeaRning
 Authors@R: c(person("Bo", "Wang", role=c("aut"), email="bowang87@stanford.edu"),
-             person("Daniele", "Ramazzotti", role=c("aut", "cre"), email="daniele.ramazzotti@yahoo.com"),
+             person("Daniele", "Ramazzotti", role=c("aut", "cre"), email="daniele.ramazzotti@stanford.edu"),
              person("Luca", "De Sano", role=c("aut"), email="l.desano@campus.unimib.it"),
              person("Junjie", "Zhu", role=c("ctb")),
              person("Emma", "Pierson", role=c("ctb")),
@@ -16,6 +16,10 @@ Imports:
     Matrix,
     stats,
     methods,
+    Rcpp,
+    pracma,
+    RcppAnnoy,
+    RSpectra
 Suggests:
     BiocGenerics,
     BiocStyle,
