--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,5 @@ importFrom(stats,dnorm)
 importFrom(stats,kmeans)
 importFrom(stats,pbeta)
 importFrom(stats,rnorm)
-useDynLib(Rtsne)
+useDynLib(SIMLR,Rtsne_cpp)
 useDynLib(SIMLR,projsplx)
