--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(SIMLR)
 export(SIMLR_Feature_Ranking)
 export(SIMLR_Large_Scale)
 import(Matrix)
+import(Rcpp)
 import(RcppAnnoy)
 importFrom(RSpectra,eigs_sym)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
