--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ cache: packages
 before_install:    
   - tlmgr install tcolorbox
 
-# blocklist
+# safelist
 branches:
-  except:
-  - SIMLR
+  only:
+  - master
+  - development
 
-# codecov integration
-r_github_packages:
-  - jimhester/covr
+r_packages:
+  - covr
+
 after_success:
-  - Rscript -e 'library(covr);codecov()'
+  - Rscript -e 'library(covr); codecov()'
