--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: SIMLR
-Version: 1.2.0
-Date: 2017-04-27
-Title: Title: 
-    SIMLR: Single-cell Interpretation via Multi-kernel LeaRning
+Version: 1.2.1
+Date: 2017-05-29
+Title: SIMLR: Single-cell Interpretation via Multi-kernel LeaRning
 Authors@R: c(person("Bo", "Wang", role=c("aut"), email="bowang87@stanford.edu"),
              person("Daniele", "Ramazzotti", role=c("aut", "cre"), email="daniele.ramazzotti@yahoo.com"),
              person("Luca", "De Sano", role=c("aut"), email="l.desano@campus.unimib.it"),
