--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/vignettes/vignette.R
-
 # History files
 .Rhistory
 .Rapp
@@ -14,7 +12,7 @@
 .Rproj.user
 *.Rproj
 
-# TRONCO Output
+# Outputs
 *.pdf
 *.tar.gz
 *.tex
