defunct CIMLR functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SIMLR
-Version: 1.15.1
-Date: 2020-10-06
+Version: 1.15.2
+Date: 2020-10-12
 Title: 
     Single-cell Interpretation via Multi-kernel LeaRning (SIMLR)
 Authors@R: c(person("Daniele", "Ramazzotti", role=c("aut", "cre"), email="daniele.ramazzotti1@gmail.com"),
@@ -24,7 +24,10 @@ Suggests:
     BiocStyle,
     testthat,
     knitr,
-    igraph
+    igraph,
+    CIMLR
+Remotes:
+    danro9685/CIMLR
 Description:
     Single-cell RNA-seq technologies enable high throughput gene expression measurement of individual cells, and allow the discovery of heterogeneity within cell populations. Measurement of cell-to-cell gene expression similarity is critical for the identification, visualization and analysis of cell populations. However, single-cell data introduce challenges to conventional measures of gene expression similarity because of the high level of noise, outliers and dropouts. We develop a novel similarity-learning framework, SIMLR (Single-cell Interpretation via Multi-kernel LeaRning), which learns an appropriate distance metric from the data for dimension reduction, clustering and visualization. 
 Encoding: UTF-8
