--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: SIMLR
-Version: 1.17.0
-Date: 2020-10-19
+Version: 1.15.4
+Date: 2020-10-20
 Title: 
     Single-cell Interpretation via Multi-kernel LeaRning (SIMLR)
 Authors@R: c(person("Daniele", "Ramazzotti", role=c("cre","aut"),email="daniele.ramazzotti@yahoo.com",
                 comment = c(ORCID = "0000-0002-6087-2666")),
              person("Bo", "Wang", role=c("aut"), email="wangbo.yunze@gmail.com"),
-             person("Luca", "De Sano", role=c("aut"), email="luca.desano@gmail.com"),
+             person("Luca", "De Sano", role=c("aut"), email="luca.desano@gmail.com",
+                comment = c(ORCID = "0000-0002-9618-3774")),
              person("Serafim", "Batzoglou", role=c("ctb")))
 Maintainer: Luca De Sano <luca.desano@gmail.com>
 Depends:
