--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,41 @@
-/vignettes/vignette.R
-
 # History files
 .Rhistory
-.Rapp
-*.history
-*.o
+.Rapp.history
+
+# Session Data files
+.RData
 
 # Example code in package build process
 *-Ex.R
 
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
 # RStudio files
 .Rproj.user/
-.Rproj
-.Rproj.user
-*.Rproj
 
-# TRONCO Output
-*.pdf
-*.tar.gz
-*.tex
-*.mat
-*.zip
-*.png
+# Vignette files
+vignettes/*.html
+vignettes/*.pdf
 
-# Configuration file
-cfg.R
+# System
+.DS_Store
 
-*.log
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
 
-*.out
+# knitr and R markdown default cache directories
+/*_cache/
+/cache/
 
-*.toc
-/inst/doc/vignette.R
-/inst/doc/vignette.Rnw
-/src/SIMLR.so
-/src/projsplx_R.o
-/inst/doc/SIMLR.R
-/inst/doc/SIMLR.Rnw
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+docs
+doc
+Meta
+/vignettes/lg_output.xml
