--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,12 @@ Version: 1.25.1
 Date: 2023-01-08
 Title: 
     Single-cell Interpretation via Multi-kernel LeaRning (SIMLR)
-Authors@R: c(person("Daniele", "Ramazzotti", role=c("cre","aut"),email="daniele.ramazzotti@yahoo.com",
+Authors@R: c(person("Daniele", "Ramazzotti", role=c("aut"),email="daniele.ramazzotti@unimib.it",
                 comment = c(ORCID = "0000-0002-6087-2666")),
              person("Bo", "Wang", role=c("aut"), email="wangbo.yunze@gmail.com"),
-             person("Luca", "De Sano", role=c("aut"), email="luca.desano@gmail.com",
+             person("Luca", "De Sano", role=c("cre","aut"), email="luca.desano@gmail.com",
                 comment = c(ORCID = "0000-0002-9618-3774")),
              person("Serafim", "Batzoglou", role=c("ctb")))
-Maintainer: Luca De Sano <luca.desano@gmail.com>
 Depends:
     R (>= 4.1.0),
 Imports:
