--- a/.github/workflows/check-development.yml
+++ b/.github/workflows/check-development.yml
@@ -156,6 +156,7 @@ jobs:
 
       - name: Install R packages
         run: |
+          install.packages('rcmdcheck')
           install.packages('igraph')
         shell: Rscript {0}
 
@@ -344,7 +345,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          ## Comment/Un-comment in case you also want to run other versions
+          # Comment/Un-comment in case you also want to run other versions
           - {os: ubuntu-latest, r: 'devel'}
           - {os: macOS-latest, r: 'devel'}
           - {os: windows-latest, r: 'devel'}
@@ -362,7 +363,7 @@ jobs:
       - name: Setup R from r-lib
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ needs.R-CMD-check-bioc.outputs.rversion }}
+          r-version: ${{ matrix.config.r }}
 
       - name: Setup pandoc from r-lib
         uses: r-lib/actions/setup-pandoc@v2
