--- a/.github/workflows/check-master.yml
+++ b/.github/workflows/check-master.yml
@@ -29,11 +29,9 @@
 ## http://bioconductor.org/developers/how-to/git/
 on:
   push:
-    branches:
-      - master
+    branches: [main, master]
   pull_request:
-    branches:
-      - master
+    branches: [main, master]
 
 name: check-master
 
@@ -160,6 +158,7 @@ jobs:
       - name: Install R packages
         run: |
           install.packages('igraph')
+          
         shell: Rscript {0}
 
       - name: Query dependencies
