--- a/.github/workflows/check-development.yml
+++ b/.github/workflows/check-development.yml
@@ -46,7 +46,7 @@ env:
   run_covr: 'false'
   run_pkgdown: 'false'
   has_RUnit: 'false'
-  cache-version: 'cache-v1'
+  cache-version: 'cache-v2'
 
 jobs:
   ## This first job uses the GitHub repository branch name to infer what
@@ -347,7 +347,7 @@ jobs:
       matrix:
         config:
           # Comment/Un-comment in case you also want to run other versions
-          - {os: ubuntu-latest, r: 'devel'}
+          ###- {os: ubuntu-latest, r: 'devel'}
           - {os: macOS-latest, r: 'devel'}
           - {os: windows-latest, r: 'devel'}
           # - {os: ubuntu-16.04, rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
